--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -7,6 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
+    <script src="/transactions.js"></script>
 </head>
 <body>
 <div class="container">
@@ -25,7 +27,7 @@
 </div>
 
 <div class="container">
-    <button class="btn btn-primary m-2">Add Transaction</button>
+    <button class="btn btn-primary m-2" data-target="#addTransactionModal" data-toggle="modal">Add Transaction</button>
 
     <table class="table table-striped">
         <thead>
@@ -33,17 +35,84 @@
             <th>Product</th>
             <th>Type</th>
             <th>Amount</th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
         <tr data-th-each="transaction:${transactions}">
-            <td data-th-text="${transaction.product}"></td>
+            <td>
+                <a class="nav-link text-dark" data-th-href="'/transactions/'+${transaction.id}"
+                   data-th-text="${transaction.product}"></a>
+            </td>
             <td data-th-text="${transaction.type}"></td>
             <td data-th-text="${transaction.amount}"></td>
+            <td>
+                <div data-th-id="${transaction.id}" style="cursor: pointer">
+                    <i class="fas fa-edit mr-2" data-target="#addTransactionModal" data-toggle="modal"
+                       onclick="editTransaction()"></i>
+                    <i class="fas fa-trash-alt"></i>
+                </div>
+            </td>
         </tr>
         </tbody>
     </table>
+</div>
+<div class="container" data-th-if="${showTransactionDetails}">
+    <div class="card">
+        <div class="card-header">Transaction Information</div>
+        <div class="card-body">
+            <ul>
+                <li><span>Details:</span><span data-th-text="${crtTransaction.product}"></span></li>
+                <li><span>Amount:</span><span data-th-text="${crtTransaction.amount}"></span></li>
+                <li><span>Type:</span><span data-th-text="${crtTransaction.type}"></span></li>
+                <li><span>Account:</span><span data-th-text="${crtTransaction.account.name}"></span></li>
+                <li><span>Category</span>
+                    <ul>
+                        <li data-th-each="category:${crtTransaction.categories}" data-th-text="${category.name}">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="modal" id="addTransactionModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
 
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Transaction details</h4>
+                <button class="close" data-dismiss="modal" type="button">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="modal-transaction-product">Product</label>
+                    <input class="form-control" id="modal-transaction-product" type="text"/>
+                </div>
+                <div class="form-group">
+                    <label for="modal-transaction-amount">Amount</label>
+                    <input class="form-control" id="modal-transaction-amount" type="number"/>
+                </div>
+                <div class="form-group">
+                    <label for="modal-transaction-type">Type</label>
+                    <input class="form-control" id="modal-transaction-type" type="text"/>
+                </div>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button class="btn btn-danger" data-dismiss="modal" type="button">Close</button>
+                <button class="btn btn-primary" data-dismiss="modal" onclick="addTransaction()"
+                        type="button"
+                >Add
+                </button>
+            </div>
+
+        </div>
+    </div>
 </div>
 
 </body>
